# Predicting-Fungal-Contaminants-for-Space-Missions

./: .gitignore  README.md  config.yml  phylum_cache.json  requirements.txt
data/: fungi_organisms.xlsx  fungi_organisms_and_proteins.xlsx
data/proteomes/queries/: ALS3-Candida-albicans_query.fasta  BCR1-Candida-albicans_query.fasta  CZF1-Candida-albicans_query.fasta  EFG1-Candida-albicans_query.fasta  ERG251-Candida-albicans_query.fasta  FLO8-Candida-albicans_query.fasta  HSP90-Aspergillus-fumigatus_query.fasta  HWP1-Candida-albicans_query.fasta  MDR1-Candida-albicans_query.fasta  MRR1-Candida-albicans_query.fasta  NDT80-Candida-albicans_query.fasta  RAD51-Saccharomyces-cerevisiae_query.fasta  RIM101-Candida-albicans_query.fasta  SAP5-Candida-albicans_query.fasta  (+7 more)
docs/: EXTENSION.md  REPRODUCING.md  STREAMLIT_GUIDE.md
docs/files/: fastas_ncbi.txt  gold_20250607_211424.csv  organism_protein_table.xlsx  proteomes_taxonomy_id_4751_2025_09_17.tsv
example/custom_fastas/: Yamadazyma_tenuis.fasta
src/: README.md  pyproject.toml  sample_data.txt
src/fungi_pipeline/: config.py  pipeline.py  test_config.py  test_pipeline.py  utils.py
src/fungi_pipeline/blast/: runner.py  test_runner.py
src/fungi_pipeline/excel/: fungal_summary.xlsx  make_excel.py  phyla.py  phylum_cache.json
src/fungi_pipeline/fastas/: extract_fastas.py  genome_fastas.py  jgi_portal_mappings.json  ncbi_fastas.py  test_extract_fastas.py  uniprot_fastas.py
src/fungi_pipeline/orthodb/: get_orthologs.py
src/fungi_pipeline/plots/: plots.py  test_plot.py
src/results/: all_results.csv
